# django-project-structure

./: .env.example  .gitignore  Dockerfile  README.md  env_utils.py  manage.py  pyproject.toml
project/: asgi.py  wsgi.py
project/settings/: base.py  develop.py  development.py  production.py
